--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,8 @@
 .popup {
     position: fixed;
-    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    display: none;
     justify-content: center;
     align-items: center;
     top: 0;
@@ -9,26 +11,89 @@
     right: 0;
     z-index: 1;
     background: rgba(20, 33, 33, 0.8);
-    transform: translateY(60%) scale(0);
 }
 
 .popup_visible {
-    transform: translateY(0) scale(1);
+    display: flex;
 }
 
-
 .popup__iframe {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    bottom: 0;
-    right: 0;
-    width: 90%;
-    height: 90%;
+    box-sizing: border-box;
+    background-color: #fff;
+    width: calc(100% - 40px);
+    max-width: 1650px;
+    max-height: 900px;
+    padding: 10px 10px;
+    height: 70%;
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
+    gap: 30px;
+    align-items: center;
 }
 .popup__close{
     position: absolute;
     z-index: 2;
     top: 10px;
     right: 20px;
+}
+
+.links{
+    height: 100%;box-sizing: border-box;display: flex;flex-direction: column;justify-content: space-evenly;background-image: linear-gradient(180deg, rgba(83, 83, 99, 0.66) 68.23%, rgba(22, 18, 236, 0) 100%);border-radius: 5px;list-style-type: none;margin: 0;padding: 20px;
+}
+
+.links__item{
+    background-color: white;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    display: flex;
+    max-width: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    min-height: 22%;
+    padding: 0 20px
+}
+
+.links__link{
+    text-decoration: none;
+    text-align: right;
+    margin-right: 20px;
+}
+
+.links__img{
+    width: 100px;
+}
+
+.join{
+    height: 80%;width: 80%;background-color: #fff;color: #000;border: 1px solid #000000;border-radius: 50%;
+    display: grid;grid-template-rows: 1fr 40%;
+    align-items: center;justify-content: stretch;line-height: 1.5;justify-self: center;
+}
+.join__info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.join__form{
+    width: 100%;display: flex;flex-direction: column;align-items: center;justify-content: center;
+}
+
+.join__title{
+    font-style: normal;font-weight: 700;font-size: 1.2em;text-transform: uppercase;margin: 10px 0 20px;
+}
+.join__text{
+    margin: 0;
+}
+.join__amendment{
+}
+
+.join__submit{
+    box-sizing: border-box;padding: 10px;width: 50%;display: flex;justify-content: center;align-items: center;color: #fff;
+    background: rgba(19, 17, 16, 0.83);box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);border-radius: 20px;margin: 17px auto 0;
+    text-transform: uppercase;cursor: pointer;
+}
+
+.join__input{
+    border: 0;border-bottom: 1px solid;outline: none;font-size: 1em;
 }
